--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,10 @@ body {
   height: 100%;
 }
 
+*{
+  font-family: sans-serif;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;  
