--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -10,6 +10,12 @@
   font-family: sans-serif;
 }
 
+.sc-heading{
+  font-family: sans-serif;
+  font-weight: 700;
+  color: #043d5d;
+}
+
 
 .btn-hover-bg:hover{
   color: white !important;
@@ -46,16 +52,44 @@
 }
 
 .nav-tabs{
+  --bs-nav-tabs-link-hover-border-color: #043d5d #043d5d #043d5d !important;
+  --bs-nav-tabs-link-active-border-color: #043d5d #043d5d white !important; 
   --bs-nav-tabs-border-color: #043d5d !important;
   --bs-nav-tabs-link-active-color:#043d5d !important;
   --bs-nav-tabs-border-width: 3px !important;
   border-bottom: var(--bs-nav-tabs-border-width) double var(--bs-nav-tabs-border-color) !important;
 }
-/* 
-.nav-tabs .nav-link.active{
-  border: var(--bs-nav-tabs-border-width) double transparent !important;
-} */
 
-.nav-tabs .nav-link{
-  border: double transparent !important;
+.nav-link-non-active{
+  color: #043d5d !important;
+}
+
+.nav-link{
+  height: 50px;
+}
+
+.nav-link-non-active:hover{
+  -webkit-text-fill-color: white !important;
+  background-color: #3498db !important;
+  border-top:double !important;
+  border-left: double !important;
+  border-right: double !important;
+  border-bottom: double !important;
+}
+
+.nav-link.active:hover{
+  -webkit-text-fill-color: #3498db !important;
+}
+
+.nav-link.active{
+  border-top:double !important;
+  border-left: double !important;
+  border-right: double !important;
+}
+
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
